runtime/Thread/StopAtExit.java possibly leaking memory again

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 19
    • Affects Version/s: 19
    • Component/s: hotspot
    • b21
    • generic
    • generic

      In my stress testing of jdk-19+17, it appears that
      StressWrapper_StopAtExit is possibly leaking memory again.

      I have sightings on my linux-x64 and macosx-aarch64 machine
      during all three runs of jdk-19+17 stress testing on each machine.

            Assignee:
            Daniel Daugherty
            Reporter:
            Daniel Daugherty
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: