8284632: runtime/Thread/StopAtExit.java possibly leaking memory again

Reviewed-by: pchilanomate, rehn